Fixed Audiobook text overflow, sidebar bug; Update SubscriptionPage and ErrorPopUp styles

--- a/src/components/AIPodcastSysPublisher/AIAudioBook/AudioPlayer/AudioBookPlayer.css
+++ b/src/components/AIPodcastSysPublisher/AIAudioBook/AudioPlayer/AudioBookPlayer.css
@@ -58,22 +58,33 @@
   z-index: 0;
 }
 
-.audiobook-output-display{
+.audiobook-output-display {
   height: 345px;
   width: 1000px;
   background-color: #F3F5F7;
   border-radius: 20px;
   margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
-.audiobook-text{
+.audiobook-text {
   font-size: 18px;
   max-width: 920px;
+  height: 500px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: auto;  
+  margin: auto;
+  overflow-y: auto;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  text-align: center;
 }
+
 
 .audiobook-actions {
   display: flex;
