--- a/src/components/Layout/footer/Footer.css
+++ b/src/components/Layout/footer/Footer.css
@@ -1,6 +1,7 @@
 /* Footer Container */
 .footer {
-  width: 1440px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 /* Top Half */
@@ -11,7 +12,7 @@
   background-color: #7879F1;
   height: 574px;
   padding: 0 80px;
-  width: 1440px;
+  width: 100%;
 }
 
 /* Logo */
