--- a/src/components/Layout/sidebar/Sidebar.css
+++ b/src/components/Layout/sidebar/Sidebar.css
@@ -23,7 +23,7 @@
 .file-frame {
   padding: 15px;
   border: 2px dashed #7988e3;
-  border-radius: 10px;
+  border-radius: 20px;
   background-color: white;
   min-width: 260px;
   margin-left: -5px;
@@ -35,9 +35,7 @@
   flex-direction: column;
   align-items: center;
   background-color: white;
-  border: dashed 2px #7287f9;
   padding: 10px;
-  border-radius: 20px;
   margin-top: -10px;
   height:120px;
 }
@@ -64,8 +62,7 @@
     width: auto;
     border: none;
     border: solid 1.5px #cdd3d8;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 13px;
 }
 
 .file-submit-wrapper .custom-file-submit:hover{
@@ -87,7 +84,7 @@
   font-weight: 600;
   width: 150px;
   height: 40px;
-  margin-top: 15px;
+  margin-top: 5px;
 }
 
 .custom-file-upload:hover {
@@ -106,6 +103,7 @@
 .file-count {
   font-size: 0.9rem;
   color: #555;
+  margin-top: -8px;
 }
 
 .file-container {
@@ -151,11 +149,11 @@
 
 .pdf-list {
   position: relative;
-  margin-top: 25px;
+  margin-top: 20px;
   background-color: white;
-  border-radius: 15px 15px 0 0;
-  box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.1);
-  max-height: 50vh;
+  border-radius: 15px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  max-height: 54vh;
   overflow-y: auto;
 }
 
